[gd_scene load_steps=10 format=3 uid="uid://bopgvmfjhrlp8"]

[ext_resource type="Script" uid="uid://b2tlopbucmf0a" path="res://Scripts/ShittyInput/number_picker.gd" id="1_0jrbs"]
[ext_resource type="Texture2D" uid="uid://iye2wsnbbrqw" path="res://assets/visuals/close.png" id="2_ghlis"]
[ext_resource type="StyleBox" uid="uid://dwkn57nwejros" path="res://Scenes/File_Window/styles/file_window_focused.tres" id="3_bj3bw"]
[ext_resource type="StyleBox" uid="uid://bv5gpockhvor8" path="res://Scenes/File_Window/styles/file_window_unfocused.tres" id="4_hpp26"]
[ext_resource type="StyleBox" uid="uid://logjjgskff0g" path="res://Scenes/File_Window/styles/button_pressed.tres" id="5_5hyl8"]
[ext_resource type="StyleBox" uid="uid://7buvuwmgk64w" path="res://Scenes/File_Window/styles/button_hovered.tres" id="6_c6r4e"]
[ext_resource type="StyleBox" uid="uid://c0ofyqwicgijc" path="res://Scenes/File_Window/styles/button_unpressed.tres" id="7_h44p0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fk3ai"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4ry4y"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.466181, 0.466181, 0.466181, 1)

[node name="number_picker" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0jrbs")

[node name="Window" type="Window" parent="."]
auto_translate_mode = 1
title = "Number Picker"
initial_position = 4
size = Vector2i(250, 150)
unresizable = true
theme_override_colors/title_color = Color(0, 0, 0, 1)
theme_override_constants/close_h_offset = 25
theme_override_constants/close_v_offset = 25
theme_override_icons/close = ExtResource("2_ghlis")
theme_override_styles/embedded_border = ExtResource("3_bj3bw")
theme_override_styles/embedded_unfocused_border = ExtResource("4_hpp26")

[node name="ColorRect" type="ColorRect" parent="Window"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Window"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Text" type="LineEdit" parent="Window/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_uneditable_color = Color(0, 0, 0, 1)
theme_override_styles/read_only = SubResource("StyleBoxFlat_fk3ai")
text = "How many Birds did you see?"
alignment = 1
editable = false
context_menu_enabled = false
emoji_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="PanelContainer" type="PanelContainer" parent="Window/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4ry4y")

[node name="numberdisplay" type="Label" parent="Window/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Window/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="con" type="Button" parent="Window/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_styles/focus = ExtResource("5_5hyl8")
theme_override_styles/hover_pressed = ExtResource("5_5hyl8")
theme_override_styles/hover_mirrored = ExtResource("6_c6r4e")
theme_override_styles/hover = ExtResource("6_c6r4e")
theme_override_styles/pressed = ExtResource("5_5hyl8")
theme_override_styles/normal = ExtResource("7_h44p0")
text = "Confirm"

[node name="den" type="Button" parent="Window/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_styles/focus = ExtResource("5_5hyl8")
theme_override_styles/hover_pressed = ExtResource("5_5hyl8")
theme_override_styles/hover_mirrored = ExtResource("6_c6r4e")
theme_override_styles/hover = ExtResource("6_c6r4e")
theme_override_styles/pressed = ExtResource("5_5hyl8")
theme_override_styles/normal = ExtResource("7_h44p0")
text = "Cancel"

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="Window/VBoxContainer/HBoxContainer/con" to="." method="_on_con_pressed"]
[connection signal="pressed" from="Window/VBoxContainer/HBoxContainer/den" to="." method="_on_den_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
